# ai-ordering-operations-center

./: README.md  zarurat.txt
client/: package-lock.json  package.json
client/src/: config.ts
server/: .env.example  bot.py  config.py  create_tables.py  database.py  pyproject.toml  test.py  test_db.py
server/dtos/: CustomerCreate.py  OrderCreate.py  OrderItemCreate.py
server/migrations/: env.py
server/migrations/versions/: 00384a879a4b_make_created_at_timezone_aware.py  568303e67433_create_menu_items_table.py  76f92ccd0dad_create_remaining_tables.py  948dd5d647a3_removed_gender_column.py  a6d7e6100d6e_create_menu_items_table.py
server/models/: customer.py  menu_item.py  order.py  order_item.py
server/prompts/: system.py
server/repositories/interfaces/: conversation_repository.py  customer_repository.py  menu_repository.py  order_item_repository.py  order_repository.py
server/repositories/redis_repository/: conversation_repository.py
server/repositories/sqlalchemy/: customer_repository.py  menu_repository.py  order_item_repository.py  order_repository.py
server/schemas/: customer.py  menu.py
server/scripts/: seed_menu.py
server/state/: conversation.py  order.py
server/tools/: menu.py  order.py  restaurant.py  time.py
