[project]
name = "ai-ordering-operations-center"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "pipecat-ai[daily,google,runner,silero,websocket]>=1.4.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy[asyncpg]>=2.0.51",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
